2002-11-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03387] Re: tab browser
	* buffer.c (newBuffer): buf->LINES initialize
		(gotoLine): use buf->LINES
		(gotoRealLine): use buf->LINES
	* display.c (displayBuffer): check by buf->LINES
		(redrawNLine): buf->LINES
		(redrawLine): buf->LINES
		(redrawLineImage): no need buf->rootY
		(cursorDown): buf->LINES
		(arrangeCursor): buf->LINES
	* etc.c (columnSkip): buf->LINES
		(lineSkip): buf->LINES
		(currentLineSkip): buf->LINES
	* fm.h (Buffer): add LINES
	* main.c (nscroll): Currentbuf->LINES
		(pgFore): Currentbuf->LINES
		(pgBack): Currentbuf->LINES
		(ctrCsrV): Currentbuf->LINES
		(movD): Currentbuf->LINES
		(movU): Currentbuf->LINES
		(_goLine): Currentbuf->LINES
		(drawAnchorCursor): Currentbuf->LINES
		(setOpt): B_REDRAW_IMAGE
		(newT): B_REDRAW_IMAGE
		(closeT): B_REDRAW_IMAGE
		(nextT): B_REDRAW_IMAGE
		(prevT): B_REDRAW_IMAGE
		(moveTab): B_NORMAL

2002-11-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03386] Re: Interrupt in no_proxy_check()
	* file.c (getAuthCookie): term_cbreak()
		(loadGeneralFile): term_cbreak()
				term_raw()
				preFormUpdateBuffer() before term_raw()
		(loadHTMLstream): term_raw()

2002-11-07  Katsumi@yamaoka.cc

	* [w3m-dev 03385] install-sh typo
	* install-sh: s/'/"/

2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03383] Select the nearest map area as default.
	* fm.h (MapArea): add center_x, center_y
	* map.c (nearestMapArea): added
		(follow_map_menu): initial by nearestMapArea()
		(newMapArea): set center_x, center_y

2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03382] Interrupt in no_proxy_check()
	* url.c (check_no_proxy): SIGINT trap by KeyAbort

2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03380] fix configure
	* configure: s/INSTALL_W3MIMGDISPLAY/install_w3mimgdisplay/
			already define
	* config.h.dist (INSTALL_W3MIMGDISPLAY): added
